Добавлена первая лекция

--- a/lectures/01.tex
+++ b/lectures/01.tex
@@ -1,7 +1,76 @@
 % Глава.	
-\chapter{Лекция первая}
-	
-% Подглавы.
-%\section{Глава}
+\chapter{Лекция первая. Введение в БД.}
 
-Лекция привет.
+\section{Базы данных.}
+
+\textit{БД} - это самодокументированная собрание интегрированных записей. Набор таблиц.
+
+\textit{Самодокументированная} - хранятся метаданные, т.е. данные о данных.
+
+Интегрированные записи - файлы данных. Целый комплекс.
+
+\section{Основные требования к БД.}
+\begin{itemize}
+	\item Не избыточность - не храним лишнюю информацию.
+	\item Эффективность доступа - малое время отклика на действие пользователя.
+	\item Совместное использование.
+	\item Безопасность. Также внутренняя безопасность - защита от дурака (пример: вместо числа ввел букву).
+	\item Восстановление после сбоя.
+	\item Целостность - если ссылаемся на какой-то объект, то он должен быть. Не ссылаться на несуществеющие объекты.
+	\item Независимость от сторонних приложений. Если программа отправляет ерунду БД должна обработать.
+\end{itemize}
+
+\section{СУБД, журнализация.}
+
+\textit{СУБД} - (Средства управления БД) приложение, обеспечивающее создание, хранение, обновление
+и поиск информации в БД.Программа.
+\textbf{СУБД управляет БД}.
+
+\textit{Система БД} - совокупность БД.
+
+\textit{Транзакция} - набор действий, которые выполняются одновременно.
+(Пример: онлайн перевод, одновременно в одном месте деньги ушли, в другом появились.)
+
+\textit{Журнализация} - информация о действиях, которые происходили в системе. Помогает
+в откате каких-то действий. \textbf{БД} сохраняет запросы в журнале.
+
+\textbf{СУБД должна поддерживать языки.}
+
+\section{Основные компоненты СУБД}
+
+\begin{itemize}
+	\item Ядро - управление памятью. Журнализация.
+	\item Процессор языка БД - оптимизация. Выполнение.
+	\item Подсистема поддержки времени исполнения.
+	\item Сервисные программы - те утилиты, которые мы пишем, доп. возможность. (Вывод звездочек вокруг имени.)
+\end{itemize}
+
+\section{Классификация СУБД}
+
+\begin{itemize}
+	\item По модели данных
+	      \begin{itemize}
+		      \item Дореляционная.
+		            \begin{itemize}
+			            \item Инвертированный список (рис 1)
+			            \item Иерархия. (Дерево)
+			            \item Сетевые (граф)
+		            \end{itemize}
+		      \item Реляционная.
+		      \item Постреляционная
+	      \end{itemize}
+	\item По архитектуре.
+	      \begin{itemize}
+		      \item Локальные - на одном устройстве.
+		      \item Распространенные - на многих устройствах.
+	      \end{itemize}
+	\item По способу доступа к БД
+	      \begin{itemize}
+		      \item Файл-серверный подход - Подключились, взяли всё. Нагружаем клиента,
+		            а не сервер. \textbf{Минусы: У каждого клиента своя копия.}
+		      \item клиент-серверные - запросы выполняются на сервере, клиент получает
+		            только нужное
+		      \item Встраиваемые - маленькие базы, которые не нужны всем.
+	      \end{itemize}
+\end{itemize}
+
