Добавлены материалы и первая лр.

--- a/materials/my_notes/db.tex
+++ b/materials/my_notes/db.tex
@@ -10,6 +10,9 @@
 %\usepackage{pscyr} % Нормальные шрифты
 \usepackage{hyperref} % Для того, чтобы можно было по ссылке кликать.
 
+\usepackage{listings}  
+\lstset{extendedchars=\true}
+
 \usepackage{graphicx}
 \graphicspath{{./img/}}
 
@@ -26,7 +29,6 @@
 \clearpage
 
 \include{01}
-
 
 
 \end{document}
