--- a/materials/my_notes/04.tex
+++ b/materials/my_notes/04.tex
@@ -8,10 +8,11 @@ x, y - подмножество мн-ва атрибутов.
 
 x->y <=> любое x связано в точности с одним y (Биекция)
 
-{Sno} -> {City}
+\{Sno\} -> \{City\}
 
-детерминант - правая часть.
-зависимая часть - левая.
+детерминант - левая часть.
+
+зависимая часть - правая.
 
 Функциональную зависимость строим исходя из имеющихся данных.
 А не на основе какой-то логике.
@@ -21,8 +22,9 @@ x->y <=> любое x связано в точности с одним y (Бие
 
 \textbf{Тривиальная функциональная зависимость} - когда y явл. подмножеством x.
 
-{Sno, Pno} -> {Sno}
-{Sno, Qty} -> {Qty}
+\{Sno, Pno\} -> \{Sno\}
+
+\{Sno, Qty\} -> \{Qty\}
 
 Множество всех функциональных зависимостей, которые задаются данным множеством
 ФЗ является \textbf{замыканием множества}.
@@ -231,7 +233,7 @@ A -> BC
 
 B -> C
 
-A -> C
+A -> B
 
 AB -> C
 
@@ -575,6 +577,6 @@ where Qty=5
 
 \section{Партицирование}
 
-(partirion by)
+ (partirion by)
 
 Разбиение данных в таблице на подтаблицы.
